tests/ui/privacy/effective_visibilities_full_priv.stderr
error: Direct: pub(self), Reexported: pub(self), Reachable: pub(crate), ReachableThroughImplTrait: pub(crate)
  --> $DIR/effective_visibilities_full_priv.rs:8:5
   |
LL |     struct Priv;
   |     ^^^^^^^^^^^

error: not in the table
  --> $DIR/effective_visibilities_full_priv.rs:8:5
   |
LL |     struct Priv;
   |     ^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub(crate), Reachable: pub(crate), ReachableThroughImplTrait: pub(crate)
  --> $DIR/effective_visibilities_full_priv.rs:13:5
   |
LL |     pub fn foo() {}
   |     ^^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub(crate), Reachable: pub(crate), ReachableThroughImplTrait: pub(crate)
  --> $DIR/effective_visibilities_full_priv.rs:16:5
   |
LL |     impl crate::SemiPriv {
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

